Fixed spacing between name and img-contain-category

--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ header {
     font-family: "ABeeZee", sans-serif;
     font-weight: 300;
     font-size: 15px;
+    margin-bottom: -20px;
+
 }
 
 .menu {
@@ -122,7 +124,7 @@ header {
     gap: 10px;
     justify-content: space-between;
     width: 45%;
-    margin-top: 10px;
+    margin-top: 45px;
 }
 
 .container1 {
